data/derived/comb/progs/unify/prog7494.ml.out
Characters 335-336:
  | Thresh (a,b,c,d) -> "(" ^ a ^ "< " ^ b ^ " ? " ^ c ^ " : " ^ d ^ ")";;
                              ^
Error: This expression has type expr but an expression was expected of type
         string
